--- a/style/index.css
+++ b/style/index.css
@@ -31,12 +31,17 @@ body {
   cursor: pointer;
 }
 
-.btn-container div:first-child {
+.btn-container div:nth-of-type(1),
+.btn-container div:nth-of-type(2) {
   margin-right: 10px;
 }
 
 .monCache {
   width: 800px;
-  border: white 1px solid;
+  border: white 3px solid;
   overflow: hidden;
+}
+
+.hide {
+  display: none;
 }
