--- a/style/index.css
+++ b/style/index.css
@@ -6,9 +6,11 @@ body {
 }
 
 .containerGallery {
+  height: 100vh;
   display: flex;
 
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
